# nocord

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/auth/: LoginScreen.tsx  SessionLoader.tsx
src/components/chat/: ChatArea.tsx  ChatHeader.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  ReactionBar.tsx  ReplyPreview.tsx
src/components/layout/: AppShell.tsx  RoomSidebar.tsx  SpaceSidebar.tsx
src/components/members/: MemberItem.tsx  MemberList.tsx
src/components/pickers/: EmojiPicker.tsx  FileUploadButton.tsx  GifGrid.tsx  GifPicker.tsx
src/components/settings/: KeyBackupRestore.tsx  SettingsScreen.tsx
src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  PaperCard.tsx  Spinner.tsx  Tooltip.tsx
src/components/verification/: VerificationModal.tsx
src/hooks/: useMatrixSync.ts  useNotifications.ts  usePresence.ts  useRoomTimeline.ts  useVerification.ts
src/lib/call/: elementCall.ts
src/lib/matrix/: client.ts  keyBackup.ts  messages.ts  presence.ts  session.ts  spaces.ts
src/lib/notifications/: desktop.ts
src/lib/tenor/: api.ts
src/screens/: LoginPage.tsx  MainPage.tsx  SettingsPage.tsx
src/store/: index.ts
src/store/slices/: authSlice.ts  dmSlice.ts  memberSlice.ts  messageSlice.ts  notificationSlice.ts  roomSlice.ts  spaceSlice.ts  uiSlice.ts
